--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/eb/Will_Poulter_as_Eustace_Scrubb.jpg/220px-Will_Poulter_as_Eustace_Scrubb.jpg" alt="">
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d7/Lucy_Pevensie.jpg/220px-Lucy_Pevensie.jpg" alt="">
     <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ca/Skandar_Keynes_as_Edmund_Pevensie_%282008%29.jpg/220px-Skandar_Keynes_as_Edmund_Pevensie_%282008%29.jpg" alt="">
+    <center>
     <p>
-       <li> It portrays the lives and magical adventures of the four young siblings Peter, Susan, Edmund and Lucy during the World War II. Lucy is the character through whom the reader sees and experiences the major adventures of Narnia and she is therefore the protagonist of the story.</li></p>
+        It portrays the lives and magical adventures of the four young siblings Peter, Susan, Edmund and Lucy during the World War II. Lucy is the character through whom the reader sees and experiences the major adventures of Narnia and she is therefore the protagonist of the story.</p>
 <img src="style="height: 2px; border-width: 0; color: black; rgb(6,5,5); background-color: black; alt="">
-    
+    </center>
 <hr style="height: 2px; border-width: 0; color: black; rgb(6,5,5); background-color: black;">
 <center>
     <h3><b>THE SILVER CHAIR</b></h3>
